services/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hrm-api
  labels:
    app: hrm-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hrm-api
  template:
    metadata:
      labels:
        app: hrm-api
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: env
                    operator: In
                    values:
                      - dev
                      - qa
      containers:
      - name: hrm-api
        image:   473555546883.dkr.ecr.ap-southeast-1.amazonaws.com/hrm-api-dev:52
        imagePullPolicy: "Always"
        command: ["npm"]
        args: ["run", "start:debug"]
        ports:
        - containerPort: 4000
#        livenessProbe:
#          httpGet:
#            path: /api/healthcheck
#            port: 4000
#          initialDelaySeconds: 90
#          periodSeconds: 5
#          timeoutSeconds: 3
#          failureThreshold: 4
#          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /api/healthcheck
            port: 4000
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
          successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: hrm-api
  labels:
    app: hrm-api
spec:
  type: ClusterIP
  ports:
   - port: 80
     targetPort: 4000
  selector:
   app: hrm-api
