services/hrm-infra.yml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: hrm-infra
  namespace: dev
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hrm-infra
  replicas: 1 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: hrm-infra
    spec:
      serviceAccountName: ingress-admin
      containers:
      - name: hrm-infra
        image: 473555546883.dkr.ecr.ap-southeast-1.amazonaws.com/hrm-infra:1
        imagePullPolicy: "Always"
        ports:
          - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 6
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 5
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 6
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
          successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: hrm-infra
  namespace: dev
  labels:
    app: hrm-infra
spec:
  type: ClusterIP
  ports:
   - port: 80
     targetPort: 8080
  selector:
   app: hrm-infra
