services/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hrm-web
  labels:
    app: hrm-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hrm-web
  template:
    metadata:
      labels:
        app: hrm-web
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: env
                    operator: In
                    values:
                      - dev
                      - qa
      containers:
      - name: hrm-web
        image: 473555546883.dkr.ecr.ap-southeast-1.amazonaws.com/hrm-web-dev:2.2.5
        imagePullPolicy: "Always"
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds:
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: hrm-web
  labels:
    app: hrm-web
spec:
  type: ClusterIP
  ports:
   - port: 80
     targetPort: 80
  selector:
   app: hrm-web
