services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hrm-dev
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "hrm-dev.kingwork.vn"
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: hrm-api
            port:
              number: 80
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hrm-web
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hrm-qa
  namespace: qa
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "hrm-qa.kingwork.vn"
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: hrm-api
            port:
              number: 80
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hrm-web
            port:
              number: 80
